--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="assets/style.css" /> 
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -29,7 +29,7 @@
         <ul>
           <li>A margin indicates how much space we want around the outside of an element.</li>
           <li>A padding indicates how much space we want around the content inside an element.</li>
-
+          <li>i added card to all section, added the width and margin. aswell the border, the color and the box shadow</li>
         </ul>
       </section>
 
