--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="assets/style.css" /> 
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -14,7 +14,6 @@
        src="./assets/bowtie-cat.png"
        alt="Profile image of cat wearing a bow tie."
        />
-       <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
       <section class="card" id="html-section">
@@ -30,7 +29,7 @@
         <ul>
           <li>A margin indicates how much space we want around the outside of an element.</li>
           <li>A padding indicates how much space we want around the content inside an element.</li>
-          <li>i added card to all section, added the width and margin. aswell the border, the color and the box shadow</li>
+
         </ul>
       </section>
 
@@ -46,9 +45,7 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>A variable is a named container that allows us to store data in our code.</li>
-          <li>Control flow is the order in which a computer executes code in a script.</li>
-          <li>added functions and debugged to figure out the problem.</li>
+          <li>Enter your JavaScript notes here</li>
         </ul>
       </section>
     </main>
@@ -56,6 +53,5 @@
     <footer>
       <p>I can code!</p>
     </footer>
-    <script src="./assets/script.js"></script> 
   </body>
 </html>
